[metadata]
name = dsp_tools
version = 0.0.0
author = Daniel Wait
description = This is my DSP playgorund for projects
long_description = Currently working on pre-processing PhysioNet data for Blood Pressure estimation via CNNs.

[options]
include_package_data = True
packages = find_namespace:
namespace_packages =
  src
  dsp_tools
python_requires = >=3.7, <4
install_requires = 
  numpy>=1.21.6
  pandas>=1.3.5
  scipy>=1.7.3
  matplotlib>=3.5.3
  jupytext>=1.14.1
  ipykernel>=6.15.2
